# autoregressive

./: .gitignore  .gitmodules  README.md  playground.ipynb  pyproject.toml  train.sh
gpt-2/: .gitignore  model.py  model_sa.py  sample.py  train.py
gpt-2/config/: train_gpt2.py  train_gpt2_maths.py  train_gpt2_sa.py
gpt-2/data/maths/: maths.py
gpt-2/data/openwebtext/: prepare.py
llms/: README.md  dataset.py  inference.py  inference_batched.py  karpathy.py  model.py  tokenizer.py  train.py
llms/config/: maths.yaml
llms/configs/: __init__.py  main.yaml
llms/models/: __init__.py  complete.py  karpathy.py  model.py  sa_model.py
