[tool.poetry]
name = "autoregressive"
version = "0.1.0"
description = ""
authors = ["Flecart <huangelo02+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.40.1"
torch = "^2.3.0"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
ipykernel = "^6.29.4"
datasets = "^2.19.0"
tiktoken = "^0.6.0"
tqdm = "^4.66.2"
wandb = "^0.16.6"
mathematics-dataset = "^1.0.1"
sympy = "^1.12.1"
pydantic = "^2.7.4"
pynvml = "^11.5.0"
hydra-core = "^1.3.2"
einops = "^0.8.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
